<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Wishlist</string>
    <string name="action_settings">Settings</string>
    
    <string name="edit_username">Enter user name</string>
    <string name="edit_password">Enter password</string>
    <string name="edit_wishdescription">Enter description</string>
    <string name="edit_wishurl">Enter url</string>
    
    <string name="button_login">Login</string>
    <string name="button_newuser">New user</string>
    <string name="button_addWish">Add wish</string>
    <string name="button_wishsave">Save</string>
    
    <string name="title_activity_list_wishlists">My wishlists</string>
    <string name="title_activity_wish">My wish</string>
</resources>