<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".WishActivity" >

    <EditText
        android:id="@+id/editWishDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_wishdescription"
        android:inputType="text">
        <requestFocus />
    </EditText>
    <EditText
        android:id="@+id/editWishUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_wishurl"
        android:inputType="textUri" >
    </EditText>

    <Button
        android:id="@+id/button_wishsave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_wishsave"
        android:onClick="save" />
</LinearLayout>